// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionGroup doesn't render when the group isn't visible 1`] = `""`;

exports[`AccordionGroup with dispatch displays the content when the group becomes visible and is expanded 1`] = `
<section>
  <header
    onClick={[Function]}
  >
    header
  </header>
  <div
    style={
      Object {
        "display": undefined,
      }
    }
  >
    <span>
      content
    </span>
  </div>
</section>
`;

exports[`AccordionGroup with dispatch displays the content when the group is visible and expanded 1`] = `
<section>
  <header
    onClick={[Function]}
  >
    header
  </header>
  <div
    style={
      Object {
        "display": undefined,
      }
    }
  >
    <span>
      content
    </span>
  </div>
</section>
`;

exports[`AccordionGroup with dispatch displays the content when the group is visible and gets expanded 1`] = `
<section>
  <header
    onClick={[Function]}
  >
    header
  </header>
  <div
    style={
      Object {
        "display": undefined,
      }
    }
  >
    <span>
      content
    </span>
  </div>
</section>
`;

exports[`AccordionGroup with dispatch keeps the content in DOM when the group is visible and gets collapsed 1`] = `
<section>
  <header
    onClick={[Function]}
  >
    header
  </header>
  <div
    style={
      Object {
        "display": "none",
      }
    }
  >
    <span>
      content
    </span>
  </div>
</section>
`;

exports[`AccordionGroup with dispatch loads the content lazily when the group becomes visible and is collapsed 1`] = `
<section>
  <header
    onClick={[Function]}
  >
    header
  </header>
  <div
    style={
      Object {
        "display": "none",
      }
    }
  />
</section>
`;

exports[`AccordionGroup with dispatch loads the content lazily when the group is visible and collapsed 1`] = `
<section>
  <header
    onClick={[Function]}
  >
    header
  </header>
  <div
    style={
      Object {
        "display": "none",
      }
    }
  />
</section>
`;

exports[`AccordionGroup without dispatch displays the content when the group becomes visible 1`] = `
<section>
  <header>
    header
  </header>
  <div
    style={
      Object {
        "display": undefined,
      }
    }
  >
    <span>
      content
    </span>
  </div>
</section>
`;

exports[`AccordionGroup without dispatch displays the content when the group is visible 1`] = `
<section>
  <header>
    header
  </header>
  <div
    style={
      Object {
        "display": undefined,
      }
    }
  >
    <span>
      content
    </span>
  </div>
</section>
`;
